# algorithmic-arc

./: .gitignore  LICENSE  pyproject.toml
notebooks/: 01-ca_conditional_ctm.ipynb  01-initial_tests.ipynb  02-algorithmic_abduction_induction.ipynb  03-dataset_inference_demo.ipynb
src/algorithmic_arc/complexity/lib/conditional_ca_ctm/: __init__.py
src/algorithmic_arc/complexity/lib/conditional_ca_ctm/include/: conditional_ca_ctm.h  conditional_ca_ctm_api.h  matrix_utils.h
src/algorithmic_arc/complexity/lib/conditional_ca_ctm/python/: test_wrapper.py  wrapper.py
src/algorithmic_arc/data/easy/: task_0001_bit_inversion_42.json
src/algorithmic_arc/dataset/: dataset_builder.py
src/algorithmic_arc/scripts/: test_dataset_builder.py
src/algorithmic_inference/: __init__.py  algorithmic_abduction_induction.py
src/ca_simulations/: __init__.py
src/ca_simulations/lib/ca_simulations/ca_bindings/: simulate_rule_matches_wrapper.py  simulate_rule_outputs_wrapper.py  test_simulate_rule_matches.py  test_simulate_rule_outputs.py
src/ca_simulations/lib/ca_simulations/include/: ca_dynamics.h  interrupt_flag.h  simulate_rule_matches.h  simulate_rule_matches_api.h  simulate_rule_outputs.api.h  simulate_rule_outputs.h
src/ca_simulations/lib/ca_simulations/src/: ca_dynamics.c  interrupt_flag.c  simulate_rule_matches.c  simulate_rule_outputs.c
src/ca_simulations/lib/ca_simulations/test/: test_prng.c  test_simulate_rule_matches  test_simulate_rule_matches.c  test_simulate_rule_outputs  test_simulate_rule_outputs.c
src/conditional_ctm/: __init__.py  ca_conditional_ctm.py
(+10 files in other folders)
