[project]
name = "algorithmic-arc"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuji Sakabe",email = "eyujis@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cffi (>=1.17.1,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pybdm (>=0.1.0,<0.2.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
